e2e/kubernetes/infra/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: agogos
  labels:
    name: agogos
