e2e/kubernetes/infra/gql-controller.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: agogos
  name: gql-controller
spec:
  selector:
    matchLabels:
      app: gql-controller
  template:
    metadata:
      labels:
        app: gql-controller
    spec:
      serviceAccountName: agogos-ca
      containers:
      - name: gql-controller
        image: soluto/agogos-gql-controller
        imagePullPolicy: Never
        livenessProbe:
          httpGet:
            path: /health
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /health
            port: 443
            scheme: HTTPS
          initialDelaySeconds: 5
          periodSeconds: 10
---
kind: Service
apiVersion: v1
metadata:
  namespace: agogos
  name: gql-controller
spec:
  selector:
    app: gql-controller
  ports:
    - name: http
      port: 80
      targetPort: 80
    - name: https
      port: 443
      targetPort: 443
