e2e/kubernetes/infra/webhook.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingWebhookConfiguration
metadata:
  name: gql-controller
webhooks:
  - name: schema-validation-webhook.agogos.platform
    rules:
      - apiGroups:
          - agogos.app
        apiVersions:
          - v1
        operations:
          - CREATE
          - UPDATE
        resources:
          - schemas
          - upstreams
          - upstreamclientcredentials
        scope: "Namespaced"
    failurePolicy: Fail
    clientConfig:
      service:
        namespace: "agogos"
        name: "gql-controller"
        path: "/validate"
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURHekNDQWdPZ0F3SUJBZ0lKQU9pUDZ1V2JDdjhzTUEwR0NTcUdTSWIzRFFFQkJRVUFNQ1F4SWpBZ0JnTlYKQkFNTUdXZHhiQzFqYjI1MGNtOXNiR1Z5TG1GbmIyZHZjeTV6ZG1Nd0hoY05NVGt3T0RJNE1EVXdNVFV3V2hjTgpNamt3T0RJMU1EVXdNVFV3V2pBa01TSXdJQVlEVlFRRERCbG5jV3d0WTI5dWRISnZiR3hsY2k1aFoyOW5iM011CmMzWmpNSUlCSWpBTkJna3Foa2lHOXcwQkFRRUZBQU9DQVE4QU1JSUJDZ0tDQVFFQW91L3BpUzVib2lZY2xzdFoKMEFPY2lmR3JLOEdGbUovUHdMTzE3QTVzWnhUanlubEMvTnBTOWFBVmY0b0FRbXVaYVR0SjF3N1NWa0EwYTNpSQpaMmVuaG5BS1Np [...]
    admissionReviewVersions:
      - v1beta1
    timeoutSeconds: 3
